# ltai-news

./: .env.example  .gitignore  PLAN1.md  README.md  pyproject.toml  pytest.ini
src/app/: __init__.py  main.py
src/app/api/: channels.py
src/app/client/: __init__.py  google_oauth.py
src/app/config/: __init__.py  settings.py
src/app/core/: __init__.py  logging.py  tracing.py
src/app/services/: __init__.py  channel_tracker.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  youtube_responses.py
tests/integration/: __init__.py  test_api_channels_e2e.py  test_channel_tracker.py  test_youtube_api.py
tests/unit/: __init__.py  test_channel_tracker.py  test_config.py  test_google_oauth.py
